--- a/app/src/main/res/layout/shops_item.xml
+++ b/app/src/main/res/layout/shops_item.xml
@@ -60,14 +60,16 @@
                 android:text="Ecotourism With a Master Boo"
                 android:textColor="@color/colorPrimary"
                 android:textStyle="bold"
-                android:textSize="29sp"
+                android:textSize="27sp"
+                android:textAppearance="@style/AppTheme"
+
                 tools:ignore="MissingConstraints" />
 
             <TextView
                 android:id="@+id/des"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:lineSpacingExtra="8dp"
@@ -76,6 +78,8 @@
                 android:fontFamily="@font/arabtype"
                 android:textSize="20sp"
                 android:layout_below="@+id/name"
+                android:textAppearance="@style/AppTheme"
+
                 />
 
 
@@ -101,8 +105,9 @@
                     android:textColor="@color/wheat"
                     android:gravity="center"
                     android:textSize="24sp"
-                    android:fontFamily="@font/arabtype"
                     android:layout_below="@+id/des"
+                    android:textAppearance="@style/AppTheme"
+
 
                     />
 
