--- a/app/src/main/res/layout/woking_day_item.xml
+++ b/app/src/main/res/layout/woking_day_item.xml
@@ -5,22 +5,30 @@
     android:layout_margin="10dp"
     android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/day"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:text="tttt"
-        android:textColor="@color/black"
-        android:textSize="18sp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="10dp"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/time"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center_horizontal"
-        android:text="tttt"
-        android:textColor="@color/black"
-        android:textSize="18sp" />
+        <TextView
+            android:id="@+id/day"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:text="Sunday"
+            android:layout_weight="1"
+            android:textSize="25sp"/>
+
+        <TextView
+
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="16:20 to 20:20"
+            android:textSize="25sp" />
+
+    </LinearLayout>
 </LinearLayout>
