--- a/app/src/main/res/layout/activity_billing__contact.xml
+++ b/app/src/main/res/layout/activity_billing__contact.xml
@@ -18,6 +18,7 @@
         android:textAlignment="center"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:title="@string/Booking"
+        app:titleTextAppearance="@style/Theme.AppCompat.Light.NoActionBar"
         app:titleTextColor="@color/white" />
 
 
@@ -54,7 +55,8 @@
             <com.braintreepayments.cardform.view.CardForm
                 android:id="@+id/card_form"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                />
 
 
             <Button
@@ -68,8 +70,8 @@
                 android:background="@drawable/button_background"
                 android:text="@string/buy"
                 android:textColor="@color/white"
-                android:textSize="14sp"
-                android:textStyle="bold"/>
+                android:textAppearance="@style/AppTheme"
+/>
 
             <ProgressBar
                 android:id="@+id/progressbar"
@@ -77,6 +79,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
+
                 android:visibility="gone" />
 
 
