--- a/app/src/main/res/layout/activity_booking_.xml
+++ b/app/src/main/res/layout/activity_booking_.xml
@@ -144,8 +144,7 @@
                 android:background="@drawable/button_background"
                 android:text="@string/continue_tour"
                 android:textColor="@color/white"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:textAppearance="@style/AppTheme" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </LinearLayout>
