--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -54,15 +54,29 @@
                 app:spb_animateToCurrentProgressState="true"
                 app:spb_checkStateCompleted="true"/>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="10dp"
+            android:orientation="vertical">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="9dp"
                 android:layout_marginTop="20dp"
-                android:text="@string/total"
+                android:text="@string/View_Ticket"
                 android:textColor="@color/black"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textAppearance="@style/AppTheme"
+                android:textStyle="bold"
+
+                android:layout_marginStart="5dp"
+                android:gravity="center"
+
+
+                />
+
+        </LinearLayout>
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -98,47 +112,52 @@
                                 android:orientation="horizontal">
 
                                 <LinearLayout
-                                    android:layout_width="176dp"
-                                    android:layout_height="84dp"
+                                    android:layout_width="82dp"
+                                    android:layout_height="104dp"
                                     android:layout_margin="1dp"
                                     android:layout_weight="4"
 
                                     android:orientation="vertical">
 
                                     <TextView
-                                        android:layout_width="wrap_content"
+                                        android:layout_width="69dp"
                                         android:layout_height="wrap_content"
                                         android:layout_marginTop="20dp"
                                         android:layout_weight="1"
                                         android:text="@string/date"
-                                        android:textColor="@color/dark_gray"
-                                        android:textSize="16sp" />
+                                        android:textAppearance="@style/AppTheme"
+                                        android:textStyle="bold" />
 
                                     <TextView
                                         android:id="@+id/date"
                                         android:layout_width="wrap_content"
-                                        android:layout_height="12dp"
+                                        android:layout_height="wrap_content"
                                         android:layout_margin="5dp"
                                         android:layout_weight="1"
+                                        android:text="dbdfbdfbdfb"
+                                        android:textAppearance="@style/AppTheme"
                                         android:textColor="@color/black"
-                                        android:textSize="16sp" />
+
+                                        android:textSize="25sp" />
                                 </LinearLayout>
 
                                 <LinearLayout
                                     android:layout_width="90dp"
-                                    android:layout_height="90dp"
+                                    android:layout_height="wrap_content"
                                     android:layout_margin="5dp"
                                     android:layout_weight="1"
                                     android:orientation="vertical">
 
                                     <TextView
-                                        android:layout_width="53dp"
+                                        android:layout_width="75dp"
                                         android:layout_height="wrap_content"
                                         android:layout_marginTop="18dp"
                                         android:layout_weight="1"
                                         android:text="@string/price"
-                                        android:textColor="@color/dark_gray"
-                                        android:textSize="16sp" />
+                                        android:textAppearance="@style/AppTheme"
+                                        android:textStyle="bold"
+
+                                        />
 
                                     <TextView
                                         android:id="@+id/price_total"
@@ -146,8 +165,12 @@
                                         android:layout_height="wrap_content"
                                         android:layout_margin="3dp"
                                         android:layout_weight="1"
+                                        android:layout_marginStart="10dp"
+                                        android:text="dfbdffdghdf"
                                         android:textColor="@color/black"
-                                        android:textSize="16sp" />
+                                        android:textAppearance="@style/AppTheme"
+
+                                        android:textSize="25sp" />
                                 </LinearLayout>
 
 
@@ -176,8 +199,8 @@
                         android:background="@drawable/button_background"
                         android:text="@string/checkout"
                         android:textColor="@color/white"
-                        android:textSize="14sp"
-                        android:textStyle="bold"/>
+                        android:textAppearance="@style/AppTheme"
+                        />
                 </LinearLayout>
             </ScrollView>
         </LinearLayout>
