--- a/app/src/main/res/layout/enter_code.xml
+++ b/app/src/main/res/layout/enter_code.xml
@@ -32,6 +32,7 @@
         android:digits="0123456789"
         android:hint="Verification code"
         android:layout_margin="10px"
+        android:textAppearance="@style/AppTheme"
         android:maxLength="9" />
     </LinearLayout>
 
@@ -48,8 +49,9 @@
         android:text="@string/continue_tour"
         android:textAllCaps="false"
         android:textColor="#ffffff"
-        android:textSize="14sp"
-        android:textStyle="bold" />
+        android:textAppearance="@style/AppTheme"
+
+        />
 
     <ProgressBar
         android:id="@+id/progressbar"
