--- a/app/src/main/res/layout/show_events_rowlayout.xml
+++ b/app/src/main/res/layout/show_events_rowlayout.xml
@@ -53,14 +53,13 @@
                 android:clickable="true"
                 android:text="event name"
                 android:textColor="@color/white"
-                android:textSize="22sp"
-                android:textStyle="bold" />
+                android:textAppearance="@style/AppTheme"
+                />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -79,7 +78,8 @@
                     android:gravity="center"
                     android:text="Event Time"
                     android:textColor="@android:color/white"
-                    android:textSize="15sp" />
+                    android:textAppearance="@style/AppTheme"
+                    android:textSize="22sp" />
             </LinearLayout>
 
         </LinearLayout>
