--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,14 @@
 
     </style>
 
+    <style name="card">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textSize">40dp</item>
+    </style>
+
 
     <style name="calender" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
