--- a/app/src/main/res/layout/activity_billing__contact.xml
+++ b/app/src/main/res/layout/activity_billing__contact.xml
@@ -12,12 +12,13 @@
         android:id="@+id/toolbar"
         style="@android:style/Widget.Material.Toolbar"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
         android:background="@color/colorPrimary"
         android:gravity="center"
         android:textAlignment="center"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:title="@string/Booking"
+        app:titleTextAppearance="@style/Theme.AppCompat.Light.NoActionBar"
         app:titleTextColor="@color/white" />
 
 
@@ -136,7 +137,7 @@
                 android:background="@drawable/button_background"
                 android:text="@string/buy"
                 android:textColor="@color/white"
-                android:textSize="14sp"
+                android:textSize="26sp"
                 android:textStyle="bold"/>
 
             <ProgressBar
