--- a/app/src/main/res/layout/activity_save__ticket.xml
+++ b/app/src/main/res/layout/activity_save__ticket.xml
@@ -12,12 +12,13 @@
         android:id="@+id/toolbar"
         style="@android:style/Widget.Material.Toolbar"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
         android:background="@color/colorPrimary"
         android:gravity="center"
         android:textAlignment="center"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:title="@string/Booking"
+        app:titleTextAppearance="@style/Theme.AppCompat.Light.NoActionBar"
         app:titleTextColor="@color/white" />
 
 
@@ -130,7 +131,7 @@
                 android:gravity="center"
                 android:text="@string/ticketCopy"
                 android:textColor="@color/black"
-                android:textSize="17sp"
+                android:textSize="24sp"
                 android:textStyle="bold" />
             <TextView
                 android:layout_width="match_parent"
@@ -140,7 +141,7 @@
                 android:gravity="center"
                 android:text="@string/ticketInfo"
                 android:textColor="#808080"
-                android:textSize="16sp"
+                android:textSize="25sp"
                 android:textStyle="bold" />
 
             <LinearLayout
@@ -157,7 +158,7 @@
 
                     <LinearLayout
                         android:layout_width="220dp"
-                        android:layout_height="84dp"
+                        android:layout_height="93dp"
                         android:layout_margin="1dp"
                         android:layout_weight="4"
 
@@ -166,12 +167,13 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="45dp"
                             android:layout_marginTop="20dp"
                             android:layout_weight="1"
-                            android:layout_marginStart="45dp"
                             android:text="@string/date"
                             android:textColor="@color/dark_gray"
-                            android:textSize="16sp" />
+                            android:textSize="25sp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/date"
@@ -180,12 +182,12 @@
                             android:layout_margin="5dp"
                             android:layout_weight="1"
                             android:textColor="@color/black"
-                            android:textSize="16sp" />
+                            android:textSize="25sp" />
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="90dp"
-                        android:layout_height="81dp"
+                        android:layout_height="104dp"
                         android:layout_margin="5dp"
                         android:layout_weight="1"
                         android:orientation="vertical">
@@ -193,12 +195,13 @@
                         <TextView
                             android:layout_width="53dp"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="6.5dp"
                             android:layout_marginTop="18dp"
                             android:layout_weight="1"
                             android:text="@string/price"
-                            android:layout_marginStart="6.5dp"
                             android:textColor="@color/dark_gray"
-                            android:textSize="16sp" />
+                            android:textSize="25sp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/price_total"
@@ -207,7 +210,7 @@
                             android:layout_margin="3dp"
                             android:layout_weight="1"
                             android:textColor="@color/black"
-                            android:textSize="16sp" />
+                            android:textSize="25sp" />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -230,7 +233,7 @@
                 android:onClick="writeExternalStorage"
                 android:text="@string/ticketSave"
                 android:textColor="@color/white"
-                android:textSize="14sp"
+                android:textSize="26sp"
                 android:textStyle="bold" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
